# github-ops-mcp

./: .env.example  README.md  pyproject.toml
src/github_ops_mcp/: github_client.py  models.py  server.py
src/github_ops_mcp/tools/: issues.py  pulls.py  repos.py  teams.py
tests/: conftest.py  test_github_client.py  test_integration.py  test_issues.py  test_models.py  test_pulls.py  test_repos.py  test_teams.py
